force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/SmartIntake_Handoff_Config__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake Handoff Config</label>
    <pluralLabel>SmartIntake Handoff Configs</pluralLabel>
</CustomObject>