force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Availability_Mode__c.field-meta.xml
<CustomField>
    <fullName>Availability_Mode__c</fullName>
    <description>Controls the package-level handoff response. Supported values: CONFIGURED, ALWAYS_AVAILABLE, ALWAYS_OFFLINE.</description>
    <label>Availability Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>