force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Available_Message__c.field-meta.xml
<CustomField>
    <fullName>Available_Message__c</fullName>
    <label>Available Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>