force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Consent_Message__c.field-meta.xml
<CustomField>
    <fullName>Consent_Message__c</fullName>
    <label>Consent Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>