force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Context_Fields_To_Share__c.field-meta.xml
<CustomField>
    <fullName>Context_Fields_To_Share__c</fullName>
    <description>Semicolon-separated answer keys that may be shared during human handoff after consent.</description>
    <label>Context Fields To Share</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>