force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Declined_Message__c.field-meta.xml
<CustomField>
    <fullName>Declined_Message__c</fullName>
    <label>Declined Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>