force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Embedded_Service_Deployment_Name__c.field-meta.xml
<CustomField>
    <fullName>Embedded_Service_Deployment_Name__c</fullName>
    <label>Embedded Service Deployment Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>