force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Handoff_Config_Key__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Config_Key__c</fullName>
    <label>Handoff Config Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>