force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Handoff_URL__c.field-meta.xml
<CustomField>
    <fullName>Handoff_URL__c</fullName>
    <label>Handoff URL</label>
    <type>Url</type>
</CustomField>