force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Is_Context_Sharing_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Context_Sharing_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Context Sharing Enabled</label>
    <type>Checkbox</type>
</CustomField>