force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Messaging_Channel_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Channel_Developer_Name__c</fullName>
    <label>Messaging Channel Developer Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>