force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Offline_Message__c.field-meta.xml
<CustomField>
    <fullName>Offline_Message__c</fullName>
    <label>Offline Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>