force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <description>Supported values: ENHANCED_OMNI, ENHANCED_CHAT_V2, EXTERNAL_URL.</description>
    <label>Provider Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>