force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Queue_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Developer_Name__c</fullName>
    <label>Queue Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>