force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Requires_Consent__c.field-meta.xml
<CustomField>
    <fullName>Requires_Consent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Consent</label>
    <type>Checkbox</type>
</CustomField>