force-app/main/default/objects/SmartIntake_Handoff_Config__mdt/fields/Trigger_Message__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Message__c</fullName>
    <label>Trigger Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>